used List.of instead of Collections.singletonList