@@ -39,7 +39,7 @@ import java.net.InetSocketAddress;
 import java.net.Proxy;
 import java.security.Principal;
 import java.security.cert.*;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.StringTokenizer;
 import java.util.Vector;
@@ -566,7 +566,7 @@ final class HttpsClient extends HttpClient
                     // will do the spoof checks in SSLSocket.
                     SSLParameters paramaters = s.getSSLParameters();
                     paramaters.setEndpointIdentificationAlgorithm("HTTPS");
-                    paramaters.setServerNames(Collections.singletonList(new SNIHostName(host)));
+                    paramaters.setServerNames(List.of(new SNIHostName(host)));
                     s.setSSLParameters(paramaters);
 
                     needToCheckSpoofing = false;
